fix: Fix horizontal alignment

--- a/src/token-group/styles.scss
+++ b/src/token-group/styles.scss
@@ -116,3 +116,7 @@
     }
   }
 }
+
+.descriptor {
+  min-block-size: awsui.$line-height-body-m;
+}
